# RetailMind-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.py  constants.py  env.py  logger.py  paths.py  settings.py
etl/curation/: load.py
etl/ingestion/: csv_reader.py  data_quality.py  duplicate_handler.py  extract.py  incremental_loader.py  ingestion_pipeline.py  missing_value_handler.py  schema_validator.py
etl/orchestration/: etl_pipeline.py
etl/transformation/: feature_engineering.py  transform.py
